fix: update responsive layout breakpoints

--- a/shelter/src/assets/scss/base/_responsive.scss
+++ b/shelter/src/assets/scss/base/_responsive.scss
@@ -1,7 +1,7 @@
 // breakpoints
-$desktop-bp: 1280px;
-$tablet-bp: 768px;
-$mobile-bp: 576px;
+$desktop-bp: 1279px;
+$tablet-bp: 767px;
+$mobile-bp: 575px;
 
 $breakpoints: (
   d: $desktop-bp,
